* Params.g_options -> Options.options
* Params.g_commands -> Options.commands
* Params.g_build -> Build.bld
* Build.bld.m_scanned_folders -> Build.bld.cache_scanned_folders
* Build.bld.m_allenvs -> Build.bld.all_envs
* Node: find_build -> find_or_declare
* Node: find_source -> find_resource
* Node: find_resource_lst, find_or_declare_lst, ensure_dir_node_from_path_lst, find_dir_lst disappear
* Remove m_ from all variables
* installation api simplification
* remove the configuration cache
* the -k behaviour was restored (keep running after errors)
* new interfaces for custom error handling
* new interfaces for reordering the tasks before executing them (scheduling constraints)
* modification of the installation system: use foo.install_path = '${PREFIX}/bin' instead of inst_var and inst_dir
* Configure.Configure -> Configure.ConfigurationContext
* Build.Build -> Build.BuildContext
* detect the amount of cpus automatically
* preprocessor improvements (implicit include paths)
* configuration api refactoring (c/c++)
* The Waf binary size has been reduced by 25%
* Functional syntax is enabled for all task generators

NEW IN WAF 1.4.3
----------------
* elimination of the Action classes
* quote '%' characters in subst_obj
* boost module improvements
* two new dependency algorithms
* automatic dependency computation (task chaining)

NEW IN WAF 1.4.2
----------------
* updated documentation (waf.pdf)
* new examples (demos/simple_scenarios/)
* node system bugfixes
* compile multiple vala files at the same time
* optimization of the method clone()

NEW IN WAF 1.4.1
----------------

* the gnome help installation is finally correct
* java support improvements
* in qt4 projects, dependencies are added on files listed in the qrc
* object extensions uses a new scheme to avoid conflicts
* optional dependency tracking on headers out of the build directory (bug:132)
* set the c language extension to ".c" only
* bash completion
* installation system fixes

NEW IN WAF 1.4.0